--- a/config/database.yml
+++ b/config/database.yml
@@ -47,8 +47,15 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
+# production:
+#   <<: *default
+#   database: house-investigation_production
+#   username: house-investigation
+#   password: <%= ENV['HOUSE-INVESTIGATION_DATABASE_PASSWORD'] %>
 production:
-  <<: *default
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
   database: house-investigation_production
   username: house-investigation
   password: <%= ENV['HOUSE-INVESTIGATION_DATABASE_PASSWORD'] %>
