--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-AWS_ACCESS_KEY_ID='AKIAYDJSDRZ6WLEES44P'
-AWS_SECRET_ACCESS_KEY='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'
+AWS_ACCESS_KEY_ID='AKIAYDJSDRZ6SDJQPCWX'
+AWS_SECRET_ACCESS_KEY='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'
 AWS_DEFAULT_REGION='ap-northeast-1'
