--- a/config/database.yml
+++ b/config/database.yml
@@ -14,19 +14,19 @@ default: &default
   encoding: utf8
   pool: 5
   username: root
-  password:
+  password: blaCk#136tiGer
   host: localhost
 
 development:
   <<: *default
-  database: house-investigation_development
+  database: house_investigation_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: house-investigation_test
+  database: house_investigation_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -51,6 +51,6 @@ production:
   adapter: postgresql
   encoding: unicode
   pool: 5
-  database: house-investigation_production
-  username: house-investigation
+  database: house_investigation_production
+  username: house_investigation
   password: <%= ENV['HOUSE-INVESTIGATION_DATABASE_PASSWORD'] %>
